Correctly aligned numpad

--- a/sudoku/src/App.css
+++ b/sudoku/src/App.css
@@ -5,10 +5,12 @@
   text-align: center;
 }
 
-.grid-square {
-  height: 30px;
-  width:30px;
-  text-align: center;
+
+
+.puzzle-area {
+  width: 400px;
+  position: relative;
+  
 }
 
 .logo {
